test/netlist/error/primitive-arity.bop
A(a) = c
where
  c = And(a);
end where;
